# Vektor

./: .clang-format  .gitignore  README.md  flake.nix  meson.build
shaders/: selection.frag.glsl  triangle.frag.glsl  triangle.vert.glsl
src/: main.c  matrix.c  matrix.h  vector.h
src/application/: applicationstate.c  applicationstate.h
src/core/: matrix.c  matrix.h  modifier.c  modifier.h  primitives.c  primitives.h  raster.c  raster.h  vector.h
src/core/modifiers/: m_identity.c
src/ui/: uicontroller.c  uicontroller.h  vektorcanvas.c  vektorcanvas.h
src/ui/widgets/: colorwheel.c  colorwheel.h
src/util/: color.h
ui/: main.css  main.ui
